Cambie la ortografia

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>Fuck u</title>
 </head>
 <body>
-	<h1>holña practico con fabian</h1>
-	<p>cyalquier cosardkjthdrj</p>
+	<h1>hola practico con fabian</h1>
+	<p>cualquier cosa</p>
 	
 </body>
 </html>
